AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = lwnws

lwnws_SOURCES = \
	src/util/jsonutil.cpp \
	src/util/jsonutil.hpp \
	src/util/filesysutil.cpp\
	src/util/filesysutil.hpp\
	src/appdefaults.h \
	src/Cache.cpp \
	src/Cache.h \
	src/Curler.cpp \
	src/Curler.h \
	src/DisplayFormatter.cpp \
	src/DisplayFormatter.h \
	src/main.cpp \
	src/MyMath.cpp \
	src/MyMath.h \
	src/NWSDataCombiner.cpp \
	src/NWSDataCombiner.h \
	src/NWSDataRetriever.cpp \
	src/NWSDataRetriever.h \
	src/Parser.cpp \
	src/Parser.h \
	src/Weather.cpp \
	src/Weather.h

lwnws_CPPFLAGS = -std=c++17
